# persona-leaderboard

./: 404.html  README.md  cl-gradio-pe1.json  grouped-by-question.json  index.html  mkdocs.yml  openai-generated-prompt.json  pyproject.toml
answers-v3/: index.html
basic-gpt3.5/: index.html
basic-gpt4o/: index.html
basic-gpt4o-mini/: index.html
chatgpt/: index.html
cl-gradio-pe1/: index.html
docs/: answers-v3.md  basic-gpt3.5.md  basic-gpt4o-mini.json  basic-gpt4o-mini.md  basic-gpt4o.json  basic-gpt4o.md  chatgpt.json  chatgpt.md  cl-gradio-pe1.md  grouped-by-question.json  index.md  openai-generated-prompt.json  openai-generated-prompt.md  question-0.md  question-1.md  question-10.md  question-11.md  question-12.md  question-13.md  question-14.md  question-15.md  question-16.md  question-17.md  question-18.md  question-19.md  question-2.md  question-3.md  question-4.md  question-5.md  question-6.md  question-7.md  question-8.md  question-9.md  score_summary.csv  tmpt-me.json  tmpt-me.md
openai-generated-prompt/: index.html
question-0/: index.html
question-1/: index.html
question-10/: index.html
question-11/: index.html
question-12/: index.html
question-13/: index.html
question-14/: index.html
question-15/: index.html
question-16/: index.html
question-17/: index.html
question-18/: index.html
question-19/: index.html
question-2/: index.html
question-3/: index.html
question-4/: index.html
question-5/: index.html
question-6/: index.html
question-7/: index.html
question-8/: index.html
question-9/: index.html
(+415 files in other folders)
