[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-eval"
version = "0.1.0"
requires-python = ">=3.11"
description = "Add your description here"
readme = "README.md"
dependencies = [
   "openai",
   "requests",
   "jinja2",
   "mkdocs",
   "mkdocs-material",
   "cookiecutter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]